// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test SearchResults Component should render correctly 1`] = `
<div>
  <Connect(PodcastList)
    isFetching={true}
    podcasts={Array []}
  />
</div>
`;

exports[`Test SearchResults Component should render correctly 2`] = `
<div>
  <Connect(PodcastList)
    isFetching={false}
    podcasts={Array []}
  />
</div>
`;
